2006-09-14  Xan Lopez  <xan.lopez@nokia.com>

	Apply patch for bug NB#3490. Taken from GNOME CVS.

    2005-06-15  Kristian Rietveld  <kris@gtk.org>

        Patch for #163214 (reported by Tommi Komulainen) and fixes some
        other scrolling/validation related bugs along the why.

	* gtk/gtktreeview.c (gtk_tree_view_size_request): run
        do_validate_rows once and don't queue a size request there,
	(gtk_tree_view_size_allocate): don't update vadj value without
        reason, sync top_row/dy after the window sizes and adjustments
        are in sync again,
	(validate_visible_area): always update dy when scrolling,
        manually set top_row here after changing the vadj (don't depend
        on _adjustment_changed and top_row/dy sync to do this), since we
        now always set top_row here correctly, we can always free
        scroll_to_path at the end which avoids infinite expose loops,
	(do_validate_rows): add queue_resize boolean, remove top_row/dy
        sync here, we cannot do it safely at this place since the
        window sizes and adjustments are out of sync,
	(validate_rows), (validate_rows_handler): update call to
        do_validate_rows().

2006-09-11  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkimmodule.c (_gtk_im_module_get_default_context_id)
	gtk/gtkimmodule.h (_gtk_im_module_get_default_context_id)
	gtk/gtkimmulticontext.c (get_global_context_id): Remove misleading 
	'const' (#333767) NB#23240 

2006-09-11  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Taken from GNOME CVS. NB#11656
	
    Fri Sep 16 14:00:20 2005  Tim Janik  <timj@imendio.com>

	* gtk/gtkwindow.c: fix bug #316180.
	gtk_window_map_event(): new function to work around lost unmap requests.

2006-09-11  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_set_property): Remove senseless hack
	which made non-editable GtkEntry insensitive.

2006-09-08  Kristian Rietveld  <kris@imendio.com>
