@@ -1,5 +1,10 @@
 2006-09-14  Xan Lopez  <xan.lopez@nokia.com>
 
+	* gtk/gtknotebook.c: (gtk_notebook_pages_allocate): Calculate proper
+	width for overflowing notebook tabs,  NB#22230.
+
+2006-09-14  Xan Lopez  <xan.lopez@nokia.com>
+
 	Apply patch for bug NB#3490. Taken from GNOME CVS.
 
     2005-06-15  Kristian Rietveld  <kris@gtk.org>
